--- a/index.html
+++ b/index.html
@@ -1,7 +1,102 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Sketchy Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-color: white;
+      color: black;
+      font-family: 'Shadows Into Light', cursive;
+      margin: 0;
+      padding: 0;
+      background: #fff;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+      border: 2px dashed #333;
+      box-shadow: 4px 4px 0 #999;
+    }
+
+    h1, h2 {
+      border-bottom: 2px dashed #444;
+      display: inline-block;
+      margin-bottom: 10px;
+      padding-bottom: 5px;
+    }
+
+    .section {
+      margin-top: 30px;
+      padding: 10px;
+      border: 2px dashed #666;
+      box-shadow: 3px 3px 0 #aaa;
+    }
+
+    a {
+      color: #111;
+      text-decoration: none;
+      border-bottom: 1px dotted #555;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .project {
+      margin-bottom: 20px;
+    }
+
+    ul {
+      list-style-type: square;
+      padding-left: 20px;
+    }
+
+    .footer {
+      margin-top: 40px;
+      text-align: center;
+      font-size: 0.9em;
+      color: #666;
+    }
+  </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <div class="container">
+    <h1>My Sketchy Portfolio</h1>
+    <p>Hello! I'm <strong>Your Name</strong>, a creative developer who loves sketching ideas into code.</p>
+
+    <div class="section">
+      <h2>About Me</h2>
+      <p>I specialize in building web apps with a clean and conceptual style. This portfolio is drawn from scratch (literally!).</p>
+    </div>
+
+    <div class="section">
+      <h2>Projects</h2>
+      <div class="project">
+        <h3>🖌️ PencilPost</h3>
+        <p>A sketch-themed blogging platform. <a href="#">View project →</a></p>
+      </div>
+      <div class="project">
+        <h3>📁 WireBox</h3>
+        <p>A file-sharing app with a hand-drawn interface. <a href="#">View project →</a></p>
+      </div>
+    </div>
+
+    <div class="section">
+      <h2>Contact</h2>
+      <ul>
+        <li>Email: <a href="mailto:you@example.com">you@example.com</a></li>
+        <li>GitHub: <a href="https://github.com/yourusername">yourusername</a></li>
+      </ul>
+    </div>
+
+    <div class="footer">
+      ✏️ Designed with a pencil & keyboard — 2025
+    </div>
+  </div>
 </body>
 </html>
